# sshh

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: main.rs
