[package]
name = "sshh"
description = "Quickly SSH into hosts"
version = "0.1.4"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
repository = "https://github.com/daniellockyer/sshh"
homepage = "https://github.com/daniellockyer/sshh"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dependencies.clap]
version = "~2.33"
default-features = false

[package.metadata.release]
sign-commit = true
sign-tag = true
no-dev-version = true
disable-publish = true
pre-release-commit-message = "v{{version}}"
